; ModuleID = '/home/carl/AnghaBench/seafile/daemon/extr_repo-mgr.c_compare_index_changeset.c'
source_filename = "/home/carl/AnghaBench/seafile/daemon/extr_repo-mgr.c_compare_index_changeset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.index_state = type { i32, %struct.cache_entry** }
%struct.cache_entry = type { i32, %struct.TYPE_2__, i32, i32, i32 }
%struct.TYPE_2__ = type { i32 }

@TRUE = common dso_local global i32 0, align 4
@CE_ADDED = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [27 x i8] c"checking %s in changeset.\0A\00", align 1
@FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.index_state*, i32*)* @compare_index_changeset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @compare_index_changeset(%struct.index_state* %0, i32* %1) #0 {
  %3 = alloca %struct.index_state*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.cache_entry*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.index_state* %0, %struct.index_state** %3, align 8
  store i32* %1, i32** %4, align 8
  %8 = load i32, i32* @TRUE, align 4
  store i32 %8, i32* %7, align 4
  store i32 0, i32* %6, align 4
  br label %9

9:                                                ; preds = %54, %2
  %10 = load i32, i32* %6, align 4
  %11 = load %struct.index_state*, %struct.index_state** %3, align 8
  %12 = getelementptr inbounds %struct.index_state, %struct.index_state* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 8
  %14 = icmp slt i32 %10, %13
  br i1 %14, label %15, label %57

15:                                               ; preds = %9
  %16 = load %struct.index_state*, %struct.index_state** %3, align 8
  %17 = getelementptr inbounds %struct.index_state, %struct.index_state* %16, i32 0, i32 1
  %18 = load %struct.cache_entry**, %struct.cache_entry*** %17, align 8
  %19 = load i32, i32* %6, align 4
  %20 = sext i32 %19 to i64
  %21 = getelementptr inbounds %struct.cache_entry*, %struct.cache_entry** %18, i64 %20
  %22 = load %struct.cache_entry*, %struct.cache_entry** %21, align 8
  store %struct.cache_entry* %22, %struct.cache_entry** %5, align 8
  %23 = load %struct.cache_entry*, %struct.cache_entry** %5, align 8
  %24 = getelementptr inbounds %struct.cache_entry, %struct.cache_entry* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = load i32, i32* @CE_ADDED, align 4
  %27 = and i32 %25, %26
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %30, label %29

29:                                               ; preds = %15
  br label %54

30:                                               ; preds = %15
  %31 = load %struct.cache_entry*, %struct.cache_entry** %5, align 8
  %32 = getelementptr inbounds %struct.cache_entry, %struct.cache_entry* %31, i32 0, i32 4
  %33 = load i32, i32* %32, align 4
  %34 = call i32 @seaf_message(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0), i32 %33)
  %35 = load i32*, i32** %4, align 8
  %36 = load %struct.cache_entry*, %struct.cache_entry** %5, align 8
  %37 = getelementptr inbounds %struct.cache_entry, %struct.cache_entry* %36, i32 0, i32 4
  %38 = load i32, i32* %37, align 4
  %39 = load %struct.cache_entry*, %struct.cache_entry** %5, align 8
  %40 = getelementptr inbounds %struct.cache_entry, %struct.cache_entry* %39, i32 0, i32 3
  %41 = load i32, i32* %40, align 4
  %42 = load %struct.cache_entry*, %struct.cache_entry** %5, align 8
  %43 = getelementptr inbounds %struct.cache_entry, %struct.cache_entry* %42, i32 0, i32 2
  %44 = load i32, i32* %43, align 4
  %45 = load %struct.cache_entry*, %struct.cache_entry** %5, align 8
  %46 = getelementptr inbounds %struct.cache_entry, %struct.cache_entry* %45, i32 0, i32 1
  %47 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %46, i32 0, i32 0
  %48 = load i32, i32* %47, align 4
  %49 = call i32 @changeset_check_path(i32* %35, i32 %38, i32 %41, i32 %44, i32 %48)
  %50 = icmp ne i32 %49, 0
  br i1 %50, label %53, label %51

51:                                               ; preds = %30
  %52 = load i32, i32* @FALSE, align 4
  store i32 %52, i32* %7, align 4
  br label %53

53:                                               ; preds = %51, %30
  br label %54

54:                                               ; preds = %53, %29
  %55 = load i32, i32* %6, align 4
  %56 = add nsw i32 %55, 1
  store i32 %56, i32* %6, align 4
  br label %9

57:                                               ; preds = %9
  %58 = load i32, i32* %7, align 4
  ret i32 %58
}

declare dso_local i32 @seaf_message(i8*, i32) #1

declare dso_local i32 @changeset_check_path(i32*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
